UI viewcontrol and input viewcontrol design

--- a/src/UI/templates/default/Input/tpl.vc_fieldselection.html
+++ b/src/UI/templates/default/Input/tpl.vc_fieldselection.html
@@ -1,5 +1,5 @@
 <div class="dropdown il-viewcontrol il-viewcontrol-fieldselection l-bar__element" id="{ID}">
-    <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"<!-- BEGIN aria_label --> aria-label="{ARIA_LABEL}"<!-- END aria_label --> aria-haspopup="true" aria-expanded="false" aria-controls="{ID_MENU}"><span class="caret"></span></button>
+    <button class="btn btn-ctrl dropdown-toggle" type="button" data-toggle="dropdown"<!-- BEGIN aria_label --> aria-label="{ARIA_LABEL}"<!-- END aria_label --> aria-haspopup="true" aria-expanded="false" aria-controls="{ID_MENU}"><span class="caret"></span></button>
     
     <ul id="{ID_MENU}" class="dropdown-menu">
         <!-- BEGIN option -->
