--- a/src/UI/templates/default/Input/tpl.vc_pagination.html
+++ b/src/UI/templates/default/Input/tpl.vc_pagination.html
@@ -4,14 +4,14 @@
     <!-- BEGIN section_part -->
     <div class="dropdown il-viewcontrol-pagination__sectioncontrol">
             <!-- BEGIN selection -->
-                {LEFT}
+                <div class="btn btn-ctrl">{LEFT}</div>
                 <!-- BEGIN entry -->
                     <!-- BEGIN spacer -->
                     <span class="il-viewcontrol-pagination__spacer">...</span>
                     <!-- END spacer -->
                     {ENTRY}
                 <!-- END entry -->
-                {RIGHT}
+                <div class="btn btn-ctrl">{RIGHT}</div>
             <!-- END selection -->
             <!-- BEGIN input -->
                 {INPUT}
@@ -22,7 +22,7 @@
     <!-- END section_part -->
 
     <div class="dropdown il-viewcontrol-pagination__num-of-items">
-        <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"<!-- BEGIN aria_label_limit --> aria-label="{ARIA_LABEL_LIMIT}"<!-- END aria_label_limit --> aria-haspopup="true" aria-expanded="false" aria-controls="{ID_MENU_LIMIT}"><span class="caret"></span></button>
+        <button class="btn btn-ctrl dropdown-toggle" type="button" data-toggle="dropdown"<!-- BEGIN aria_label_limit --> aria-label="{ARIA_LABEL_LIMIT}"<!-- END aria_label_limit --> aria-haspopup="true" aria-expanded="false" aria-controls="{ID_MENU_LIMIT}"><span class="caret"></span></button>
         <ul id="{ID_MENU_LIMIT}" class="dropdown-menu">
             <!-- BEGIN option_limit -->
             <li>{OPTION_LIMIT}</li>
