--- a/src/UI/templates/default/Panel/tpl.secondary.html
+++ b/src/UI/templates/default/Panel/tpl.secondary.html
@@ -3,10 +3,8 @@
 	<div class="panel-heading ilHeader">
 		<h2>{TITLE}</h2>
 		{ACTIONS}
-		<!-- BEGIN view_controls -->
-			{VIEW_CONTROL}
-		<!-- END view_controls -->
 	</div>
+	<div class="panel-viewcontrols l-bar__container"><!-- BEGIN view_controls -->{VIEW_CONTROL}<!-- END view_controls --></div>
 	<!-- END heading -->
 
 	<div class="panel-body">
