--- a/src/UI/templates/default/ViewControl/tpl.mode.html
+++ b/src/UI/templates/default/ViewControl/tpl.mode.html
@@ -1,1 +1,1 @@
-<div class="btn-group il-viewcontrol-mode" aria-label="{ARIA}" role="{ROLE}"><!-- BEGIN view_control -->{BUTTON}<!-- END view_control --></div>
+<div class="il-viewcontrol-mode l-bar__element" aria-label="{ARIA}" role="{ROLE}"><!-- BEGIN view_control -->{BUTTON}<!-- END view_control --></div>
