--- a/src/UI/templates/default/ViewControl/tpl.pagination.html
+++ b/src/UI/templates/default/ViewControl/tpl.pagination.html
@@ -1,7 +1,7 @@
-<div class="il-viewcontrol-pagination"<!-- BEGIN id --> id="{ID}"<!-- END id -->>
-<span class="browse previous">{PREVIOUS}</span>
+<div class="il-viewcontrol-pagination l-bar__element"<!-- BEGIN id --> id="{ID}"<!-- END id -->>
+<span class="btn btn-ctrl browse previous">{PREVIOUS}</span>
 <!-- BEGIN first --> <span class="first">{FIRST}</span> <!-- END first -->
 <!-- BEGIN entry --> {BUTTON} <!-- END entry -->
 <!-- BEGIN last --> <span class="last">{LAST}</span> <!-- END last -->
-<span class="browse next">{NEXT}</span>
+<span class="btn btn-ctrl browse next">{NEXT}</span>
 </div>
