--- a/src/UI/templates/default/ViewControl/tpl.sortation.html
+++ b/src/UI/templates/default/ViewControl/tpl.sortation.html
@@ -1,3 +1,3 @@
-<div class="il-viewcontrol-sortation" <!-- BEGIN id -->id="{ID}"<!-- END id -->>
+<div class="il-viewcontrol-sortation l-bar__element" <!-- BEGIN id -->id="{ID}"<!-- END id -->>
 {SORTATION_DROPDOWN}
 </div>
