--- a/templates/default/010-settings/_settings_button.scss
+++ b/templates/default/010-settings/_settings_button.scss
@@ -24,6 +24,16 @@ $il-btn-primary-bg: darken(s-color.$il-secondary-color, 10%) !default;
 //** Border color of the primary button (most important button on the screen)
 $il-btn-primary-border: darken(s-color.$il-secondary-color, 10%) !default;
 
+//** Text color of the primary button (most important button on the screen)
+$il-btn-ctrl-color: s-color.$il-link-color !default;
+//** Background color of the primary button (most important button on the screen)
+$il-btn-ctrl-bg: s-color.$il-highlight-bg !default;
+//** Border color of the primary button (most important button on the screen)
+$il-btn-ctrl-border: s-color.$il-highlight-bg !default;
+$il-btn-ctrl-engaged-border: s-color.$il-link-color !default;
+$il-btn-ctrl-outer-height: 2.6rem !default;
+$il-btn-ctrl-inner-btn-height: 1.9rem !default;
+
 //** Colors of inactive buttons
 $il-disabled-btn-color: darken(s-color.$il-text-color, 20%) !default;
 $il-disabled-btn-bg: #b0b0b0 !default;
