UI viewcontrol fix calendar & dashboard

--- a/templates/default/070-components/UI-framework/ViewControl/_ui-component_viewcontrol.scss
+++ b/templates/default/070-components/UI-framework/ViewControl/_ui-component_viewcontrol.scss
@@ -37,6 +37,7 @@ $il-vc-pagination-btn-active-bg: $il-main-bg;
 
 // buttons inside the container
 .il-viewcontrol-section,
+.il-viewcontrol-section .btn-group,
 .il-viewcontrol-pagination__sectioncontrol,
 .il-viewcontrol-pagination__num-of-items,
 .il-viewcontrol-pagination,
