UI/ViewControl: fix tests, add selected class to dropdowns

--- a/src/UI/templates/default/Input/tpl.vc_pagination.html
+++ b/src/UI/templates/default/Input/tpl.vc_pagination.html
@@ -25,7 +25,7 @@
         <button class="btn btn-ctrl dropdown-toggle" type="button" data-toggle="dropdown"<!-- BEGIN aria_label_limit --> aria-label="{ARIA_LABEL_LIMIT}"<!-- END aria_label_limit --> aria-haspopup="true" aria-expanded="false" aria-controls="{ID_MENU_LIMIT}"><span class="caret"></span></button>
         <ul id="{ID_MENU_LIMIT}" class="dropdown-menu">
             <!-- BEGIN option_limit -->
-            <li>{OPTION_LIMIT}</li>
+            <li<!-- BEGIN selected --> class="selected"<!-- END selected -->>{OPTION_LIMIT}</li>
             <!-- END option_limit -->
         </ul>
     </div>
