--- a/src/UI/templates/default/Input/tpl.vc_sortation.html
+++ b/src/UI/templates/default/Input/tpl.vc_sortation.html
@@ -3,7 +3,7 @@
     
     <ul id="{ID_MENU}" class="dropdown-menu">
         <!-- BEGIN option -->
-        <li>{OPTION}</li>
+        <li<!-- BEGIN selected --> class="selected"<!-- END selected -->>{OPTION}</li>
         <!-- END option -->
     </ul>
 
