--- a/src/UI/templates/default/Panel/tpl.secondary.html
+++ b/src/UI/templates/default/Panel/tpl.secondary.html
@@ -4,7 +4,11 @@
 		<h2>{TITLE}</h2>
 		{ACTIONS}
 	</div>
+
+	<!-- BEGIN vc_container -->
 	<div class="panel-viewcontrols l-bar__container"><!-- BEGIN view_controls -->{VIEW_CONTROL}<!-- END view_controls --></div>
+	<!-- END vc_container -->
+
 	<!-- END heading -->
 
 	<div class="panel-body">
