UI/Input/ViewControls: rendering, submit form with relayed params

--- a/src/UI/templates/default/Input/tpl.vc_container.html
+++ b/src/UI/templates/default/Input/tpl.vc_container.html
@@ -1,3 +1,6 @@
-<form id="{ID}" role="form" class="il-viewcontrols-form l-bar__container" method="get" novalidate="novalidate">
+<form role="form" class="il-viewcontrols-form l-bar__container" method="get" id="{ID}">
 	{INPUTS}
+	<!-- BEGIN param -->
+    <input  type="hidden" name="{PARAM_NAME}" value="{VALUE}" />
+    <!-- END param -->
 </form>
