UI/Input/ViewControls: separate params, use groups

--- a/src/UI/templates/default/Input/tpl.vc_pagination.html
+++ b/src/UI/templates/default/Input/tpl.vc_pagination.html
@@ -30,7 +30,7 @@
         </ul>
     </div>
 
-    <div class="il-viewcontrol-value hidden" role="none"> helo
-        <input  type="text" name="{NAME}" value="{VALUE}" />
+    <div class="il-viewcontrol-value XXhidden" role="none">
+        {VALUES}
     </div>
 </div>
