--- a/src/UI/templates/default/Input/tpl.vc_sortation.html
+++ b/src/UI/templates/default/Input/tpl.vc_sortation.html
@@ -8,8 +8,6 @@
     </ul>
 
     <div class="il-viewcontrol-value" role="none">
-        <!-- BEGIN value -->
-        <input  type="hidden" name="{NAME}" value="{VALUE}" />
-        <!-- END value -->
+        {VALUES}
     </div>
 </div>
