UI/Input/ViewControls: fix tests

--- a/src/UI/templates/default/Input/tpl.vc_pagination.html
+++ b/src/UI/templates/default/Input/tpl.vc_pagination.html
@@ -30,7 +30,7 @@
         </ul>
     </div>
 
-    <div class="il-viewcontrol-value XXhidden" role="none">
+    <div class="il-viewcontrol-value hidden" role="none">
         {VALUES}
     </div>
 </div>
