--- a/src/UI/templates/default/Table/tpl.presentationtable.html
+++ b/src/UI/templates/default/Table/tpl.presentationtable.html
@@ -1,4 +1,4 @@
-<div class="il-table-presentation" id="{ID}">
+<div class="il-table-presentation"<!-- BEGIN id --> id="{ID}"<!-- END id -->>
 
 	<h3 class="ilHeader">{TITLE}</h3>
 
