UI/ViewControls: fix tests

--- a/src/UI/templates/default/Input/tpl.vc_pagination.html
+++ b/src/UI/templates/default/Input/tpl.vc_pagination.html
@@ -1,4 +1,4 @@
-<div class="il-viewcontrol il-viewcontrol-pagination l-bar__element" id="{ID}">
+<div class="il-viewcontrol il-viewcontrol-pagination l-bar__element"<!-- BEGIN id --> id="{ID}" <!-- END id -->>
 
 
     <!-- BEGIN section_part -->
