--- a/src/UI/templates/default/Input/tpl.vc_sortation.html
+++ b/src/UI/templates/default/Input/tpl.vc_sortation.html
@@ -1,4 +1,4 @@
-<div class="dropdown il-viewcontrol il-viewcontrol-sortation l-bar__element<!-- BEGIN disabled --> disabled<!-- END disabled -->" id="{ID}">
+<div class="dropdown il-viewcontrol il-viewcontrol-sortation l-bar__element<!-- BEGIN disabled --> disabled<!-- END disabled -->"<!-- BEGIN id --> id="{ID}" <!-- END id -->>
     <button class="btn btn-ctrl dropdown-toggle" type="button" data-toggle="dropdown"<!-- BEGIN aria_label --> aria-label="{ARIA_LABEL}"<!-- END aria_label --> aria-haspopup="true" aria-expanded="false" aria-controls="{ID_MENU}"><span class="caret"></span></button>
     
     <ul id="{ID_MENU}" class="dropdown-menu">
