UI/Table/Presentation expand/collapse btn style

--- a/src/UI/templates/default/Table/tpl.presentationtable.html
+++ b/src/UI/templates/default/Table/tpl.presentationtable.html
@@ -4,6 +4,9 @@
 
 	<!-- BEGIN viewcontrols -->
 	<div class="il-table-presentation-viewcontrols">
+		<!-- BEGIN expandcollapsebtns -->
+		<div class="btn-group">{EXPANDCOLLAPSEALL}</div>
+		<!-- END expandcollapsebtns -->
 		<!-- BEGIN vc -->
 		{VC}
 		<!-- END vc -->
