--- a/templates/default/070-components/legacy/Modules/_component_test.scss
+++ b/templates/default/070-components/legacy/Modules/_component_test.scss
@@ -121,3 +121,26 @@ $il-test-working-time-font-weight: $il-font-weight-bold;
 #tst_pass_details_overview tr {
     scroll-margin-top: 30px;
 }
+
+//
+// test result
+//
+
+.il-table-presentation-desclist.inline .il-listing-characteristic-value-row {
+    display: flex;
+    width: auto;
+    padding-right: 20px;
+}
+
+.il-table-presentation-desclist.inline  .il-listing-characteristic-value {
+    display: flex;
+    /* justify-content: space-evenly; */
+}
+
+.il-listing-characteristic-value-label, .il-listing-characteristic-value-item {
+    width: fit-content;
+}
+
+.il-listing-characteristic-value-row.clearfix {
+    border-top: none;
+}
