9/TA/ResultPresentation tweaked padding

--- a/src/UI/templates/default/Table/tpl.presentationrow.html
+++ b/src/UI/templates/default/Table/tpl.presentationrow.html
@@ -30,9 +30,12 @@
 
 			<div class="il-table-presentation-row-header-fields">
 				<!-- BEGIN important_field -->
-				{IMPORTANT_FIELD_LABEL}
-				{IMPORTANT_FIELD_VALUE}
-				|
+				<!-- BEGIN important_field_label -->
+				<div class="il-table-presentation-row-header-fields-label">{IMPORTANT_FIELD_LABEL}</div>
+				<!-- END important_field_label -->
+				<!-- BEGIN important_field_value -->
+				<div class="il-table-presentation-row-header-fields-label">{IMPORTANT_FIELD_VALUE}</div>
+				<!-- END important_field_value -->
 				<!-- END important_field -->
 				{SHY_EXPANDER}
 			</div>
