--- a/templates/default/070-components/legacy/Modules/_component_test.scss
+++ b/templates/default/070-components/legacy/Modules/_component_test.scss
@@ -129,12 +129,14 @@ $il-test-working-time-font-weight: $il-font-weight-bold;
 .il-table-presentation-desclist.inline .il-listing-characteristic-value-row {
     display: flex;
     width: auto;
-    padding-right: 20px;
+    padding-right: $il-padding-xxxlarge-horizontal;
 }
 
 .il-table-presentation-desclist.inline  .il-listing-characteristic-value {
     display: flex;
-    /* justify-content: space-evenly; */
+    .il-listing-characteristic-value-item {
+        padding-left: $il-padding-small-horizontal;
+    }
 }
 
 .il-listing-characteristic-value-label, .il-listing-characteristic-value-item {
