--- a/src/UI/templates/default/Table/tpl.presentationrow.html
+++ b/src/UI/templates/default/Table/tpl.presentationrow.html
@@ -29,14 +29,18 @@
 			</h4>
 
 			<div class="il-table-presentation-row-header-fields">
+				<div class="l-bar__container">
 				<!-- BEGIN important_field -->
-				<!-- BEGIN important_field_label -->
-				<div class="il-table-presentation-row-header-fields-label">{IMPORTANT_FIELD_LABEL}</div>
-				<!-- END important_field_label -->
-				<!-- BEGIN important_field_value -->
-				<div class="il-table-presentation-row-header-fields-label">{IMPORTANT_FIELD_VALUE}</div>
-				<!-- END important_field_value -->
+					<div class="l-bar__group">
+						<!-- BEGIN important_field_label -->
+						<div class="il-table-presentation-row-header-fields-label l-bar__element">{IMPORTANT_FIELD_LABEL}</div>
+						<!-- END important_field_label -->
+						<!-- BEGIN important_field_value -->
+						<div class="il-table-presentation-row-header-fields-label l-bar__element">{IMPORTANT_FIELD_VALUE}</div>
+						<!-- END important_field_value -->
+					</div>
 				<!-- END important_field -->
+				</div>
 				{SHY_EXPANDER}
 			</div>
 
